# marketplace-agent

./: .env.example  .env.external.example  .gitignore  AGENTS.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  84cd96a0000f_update_schema_types_and_constraints.py
docker/: Dockerfile  docker-compose.external.yml  docker-compose.yml  litellm_config.yaml
docs/: agent-workflow.md  api-reference.md  architecture.md  configuration.md  deployment.md  development.md  external-setup.md  index.md  troubleshooting.md
n8n/workflows/: __init__.py  listing_workflow.json  listing_workflow_external.json
specs/: consolidated_spec.md  initial_spec.md  project_status.md  technical_specification.md
src/: __init__.py  config.py  exceptions.py  main.py
src/agents/: __init__.py  graph.py
src/agents/nodes/: __init__.py  agent_decision.py  agent_reasoning.py  clarify.py  image_analysis.py  listing_writer.py  quality_check.py  scrape_ebay.py  scrape_vinted.py
src/agents/prompts/: __init__.py  clarification.py  decision.py  image_analysis.py  listing_writer.py  reasoning.py
src/api/: __init__.py  dependencies.py  metrics.py  middleware.py  routes.py  schemas.py
src/db/: __init__.py  repositories.py  session.py
src/models/: __init__.py  database.py  state.py
src/services/: image_service.py  pricing_service.py
src/tools/: __init__.py  ebay_scraper.py  vinted_scraper.py
tests/: conftest.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_agent_graph.py  test_api_endpoints.py
tests/unit/: __init__.py  test_image_service.py  test_pricing_service.py  test_repositories.py
