[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-agent"
version = "0.1.0"
description = "AI agent for eBay/Vinted listing generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Marketplace Agent Team", email = "team@example.com"}
]
keywords = ["ebay", "vinted", "marketplace", "ai", "agent", "listing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.26",
    "apify-client>=1.6",
    "vinted-scraper>=0.2",
    "python-multipart>=0.0.6",
    "Pillow>=10.0",
    "structlog>=24.1",
    "prometheus-client>=0.19",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
    "types-Pillow>=10.0",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/example/marketplace-agent"
Documentation = "https://github.com/example/marketplace-agent#readme"
Repository = "https://github.com/example/marketplace-agent"
Issues = "https://github.com/example/marketplace-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",   # Missing type annotation for self in method
    "ANN102",   # Missing type annotation for cls in classmethod
    "ANN401",   # Dynamically typed expressions (Any) are disallowed
    "COM812",   # Trailing comma missing (conflicts with formatter)
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D106",     # Missing docstring in public nested class
    "D107",     # Missing docstring in __init__
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "EM101",    # Exception must not use a string literal
    "EM102",    # Exception must not use an f-string literal
    "FIX002",   # Line contains TODO, consider resolving before production
    "ISC001",   # Single-line implicit string concatenation (conflicts with formatter)
    "PD011",    # Use `.to_numpy()` instead of `.values`
    "PLR0913",  # Too many arguments in function definition
    "PTH118",   # `os.path` should be replaced by `pathlib.Path`
    "PTH119",   # `os.path.dirname()` should be replaced by `pathlib.Path`
    "PTH120",   # `os.path.dirname()` should be replaced by `pathlib.Path`
    "PTH122",   # `os.path.splitext()` should be replaced by `pathlib.Path`
    "PTH123",   # `open()` should be replaced by `Path.open()`
    "PTH207",   # Replace `glob` with `Path.glob` or `Path.rglob`
    "S101",     # Use of assert detected
    "S104",     # Possible binding to all interfaces (config default)
    "S108",     # Probable insecure usage of temporary file (config default)
    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY300",   # Consider moving statement into `else` block
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN201",   # Missing return type annotation
    "ARG001",   # Unused function argument
    "PLR2004",  # Magic value used in comparison
    "S101",     # Use of assert detected
]
"alembic/*" = [
    "INP001",   # Implicit namespace package
    "D400",     # First line should end with a period
    "D415",     # First line should end with period, question mark, or exclamation point
    "E501",     # Line too long (SQL statements)
]
"src/agents/prompts/*" = [
    "E501",     # Line too long (prompt strings)
    "D400",     # Docstring first line
    "D415",     # Docstring punctuation
]
"n8n/*" = [
    "ALL",      # Ignore all linting for n8n workflow files
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "apify_client.*",
    "vinted_scraper.*",
    "slowapi.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true